--- a/R/quiz181119_Report.Rmd
+++ b/R/quiz181119_Report.Rmd
@@ -25,44 +25,56 @@ quiz1119 <- "../data/quiz181119.xlsx" %>%
             startRow = 2, endRow = 155, 
             colIndex = c(3:7, 9:14), colClasses = c(rep("character", 11)),
             stringsAsFactors = FALSE)
-quiz1119 %>% str
+quiz1119 %>% 
+  str
 names(quiz1119) <- c("dept", "id", "name", "year", "e.mail", "cell.no", "Q1", "Q2", "Q3", "Q4", "group")
-quiz1119$dept %<>% factor
-quiz1119$year %<>% factor
-quiz1119$group %<>% factor(levels = c("Red", "Black"))
-quiz1119$Q1 %<>% factor(levels = c("가", "나", "다", "라", "무응답"), 
-                        labels = c("열에 한명", 
-                                   "열에 세명", 
-                                   "열에 다섯명", 
-                                   "열에 여덟명", 
-                                   "불참"))
-quiz1119$Q2 %<>% factor(levels = c("가", "나", "다", "라", "무응답"), 
-                        labels = c("15%", "25%", "45%", "65%", "불참"))
-quiz1119$Q3 %<>% factor(levels = c("가", "나", "다", "라"), 
-                        labels = c("1명", "2명", "3명", "4명"))
-quiz1119$Q4 %<>% factor(levels = c("가", "나", "무응답"),
-                        labels = c("확실히", "확률적으로", "불참"))
-str(quiz1119)
+quiz1119$dept %<>% 
+  factor
+quiz1119$year %<>% 
+  factor
+quiz1119$group %<>% 
+  factor(levels = c("Red", "Black"))
+quiz1119$Q1 %<>% 
+  factor(levels = c("가", "나", "다", "라", "무응답"), 
+         labels = c("열에 한명", 
+                    "열에 세명", 
+                    "열에 다섯명", 
+                    "열에 여덟명", 
+                    "불참"))
+quiz1119$Q2 %<>% 
+  factor(levels = c("가", "나", "다", "라", "무응답"), 
+         labels = c("15%", "25%", "45%", "65%", "불참"))
+quiz1119$Q3 %<>% 
+  factor(levels = c("가", "나", "다", "라"), 
+         labels = c("1명", "2명", "3명", "4명"))
+quiz1119$Q4 %<>% 
+  factor(levels = c("가", "나", "무응답"),
+         labels = c("확실히", "확률적으로", "불참"))
+quiz1119 %>%
+  str
 ```
 
 ```{r, randomization, echo = FALSE, results = 'hide'}
-pander(summary(quiz1119))
+quiz1119 %>% 
+  summary %>% 
+  pander
 ```
 
-### 퀴즈 응답 비교
+## 퀴즈 응답 비교
 
-#### Latane and Darley
+### Latane and Darley
 
 `r knitr::include_graphics("../pics/Quiz171113_Q1.png", dpi = NA)`
 
-##### 방관자 효과
+#### 방관자 효과
 
 ```{r, bystander, echo = FALSE}
 tbl_q1_a <- quiz1119$Q1 %>% 
   table(quiz1119$group, ., useNA = "ifany") %>%
-  cbind(., "계" = rowSums(.)) %>%
-  rbind(., "계" = colSums(.))
-colnames(tbl_q1_a)[6] %<>% `<-`(., "결석")
+  cbind("계" = rowSums(.)) %>%
+  rbind("계" = colSums(.))
+colnames(tbl_q1_a)[6] %<>% 
+  `<-`(., "결석")
 tbl_q1_a %>% 
   pander 
 # tbl_q1_a[-3, -4] %>% 
@@ -70,7 +82,7 @@ tbl_q1_a %>%
 #   pander
 ```
 
-##### 방관자 효과(%)
+#### 방관자 효과(%)
 
 ```{r, bystander in percentage, echo = FALSE}
 tbl_q1_a %>% 
@@ -82,26 +94,27 @@ tbl_q1_a %>%
   pander
 ```
 
-#### Stanley Milgram
+### Stanley Milgram
 
 `r knitr::include_graphics("../pics/Quiz171113_Q2.png", dpi = NA)`
 
-##### 450V까지 누르는 사람
+#### 450V까지 누르는 사람
 
 ```{r, obedience, echo = FALSE}
 tbl_q2_a <- quiz1119$Q2 %>%
   table(quiz1119$group, ., useNA = "ifany") %>%
-  cbind(., "계" = rowSums(.)) %>%
-  rbind(., "계" = colSums(.))
+  cbind("계" = rowSums(.)) %>%
+  rbind("계" = colSums(.))
 colnames(tbl_q2_a)[6] <- c("결석")
-tbl_q2_a %>% pander 
+tbl_q2_a %>% 
+  pander 
 # tbl_q2_a %>%
 #   `[`(-3, -(5:6)) %>% 
 #   chisq.test(simulate.p.value = TRUE) %>%
 #   pander
 ```
 
-##### 450V까지 누르는 사람 (%)
+#### 450V까지 누르는 사람 (%)
 
 ```{r, obedience in percentage, echo = FALSE}
 tbl_q2_a %>%
@@ -113,18 +126,17 @@ tbl_q2_a %>%
   pander
 ```
 
-#### Solomon Asch
+### Solomon Asch
 
 `r knitr::include_graphics("../pics/Quiz171113_Q3.png", dpi = NA)`
 
-##### Power of 3
+#### Power of 3
 
 ```{r, Power of 3, echo = FALSE}
 tbl_q3_a <- quiz1119$Q3 %>%
   table(quiz1119$group, ., useNA = "ifany") %>%
   addmargins
-colnames(tbl_q3_a)[5:6] <- c("결석", "계")
-rownames(tbl_q3_a)[3] <- "계"
+colnames(tbl_q3_a)[5] <- "결석"
 tbl_q3_a %>% 
   pander
 # tbl_q3_a %>%
@@ -133,7 +145,7 @@ tbl_q3_a %>%
 #   pander
 ```
 
-##### Power of 3 (%)
+#### Power of 3 (%)
 
 ```{r, Power of 3 in percentage, echo = FALSE}
 tbl_q3_a %>%
@@ -145,26 +157,28 @@ tbl_q3_a %>%
   pander
 ```
 
-### Framing Effect
+## Framing Effect
 
-#### 삶과 죽음
+### 삶과 죽음
 
-##### Red
+#### Red
 
 `r knitr::include_graphics("../pics/Quiz171113_Q4_Red.png", dpi = NA)`
 
-##### Black
+#### Black
 
 `r knitr::include_graphics("../pics/Quiz171113_Q4_Black.png", dpi = NA)`
 
 
-##### 600명 중 200명이 사는 거나 400명이 죽는 것, 모두 살리는 거나 모두 죽지 않는 것이나 같은 내용임에도 반응이 다르게 나타남에 유의. 손실회피 경향과 같은 현상을 관찰할 수 있음.
+600명 중 200명이 사는 거나 400명이 죽는 것, 모두 살리는 거나 모두 죽지 않는 것이나 같은 내용임에도 반응이 다르게 나타남에 유의. 손실회피 경향과 같은 현상을 관찰할 수 있음.
+
+#### 집계
 
 ```{r, Framing Effect, echo = FALSE}
 tbl_q4_a <- quiz1119$Q4 %>%
   table(quiz1119$group, ., useNA = "ifany") %>%
-  cbind(., "계" = rowSums(.)) %>%
-  rbind(., "계" = colSums(.))
+  cbind("계" = rowSums(.)) %>%
+  rbind("계" = colSums(.))
 colnames(tbl_q4_a)[4] <- "결석"
 rownames(tbl_q4_a) <- c("생존 프레임", "사망 프레임", "계")
 tbl_q4_a %>% 
@@ -175,7 +189,7 @@ tbl_q4_a %>%
   pander
 ```
 
-##### % 비교.  
+#### % 비교.  
 
 ```{r, Framing effects in percentage, echo = FALSE}
 tbl_q4_a %>% 
