--- a/R/quiz181119_Report.Rmd
+++ b/R/quiz181119_Report.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Quiz 181119 : Framing Effects"
 author: "coop711"
-date: "`r Sys.Date()`"
+date: "2018-11-19"
 output: html_document
 ---
 
