--- a/R/quiz181128_Report_v2.Rmd
+++ b/R/quiz181128_Report_v2.Rmd
@@ -24,6 +24,7 @@ quiz1128 <- "../data/quiz181128.xlsx" %>%
   read.xlsx(sheetIndex = 1, 
             startRow = 2, endRow = 155, 
             colIndex = c(3:7, 9:14), colClasses = rep("character", 12),
+            encoding = "UTF-8",
             stringsAsFactors = FALSE)
 quiz1128 %>% str
 names(quiz1128) <- c("dept", "id", "name", "year", "e.mail", "cell.no", "group", 
@@ -41,14 +42,16 @@ birth_month_date <- quiz1128 %>%
 #> 월, 일을 날짜 순으로 정리하기 위하여 글자를 떼어내고 숫자로 변화. 1 => 01 등.
 quiz1128$month <- quiz1128$Q1 %>% 
   strsplit(split = ",") %>% 
-  sapply(function(.).[1]) 
+  sapply(. %>% .[1])
+#  sapply(function(.).[1]) 
 quiz1128$month %<>%
   nchar %>% 
   `==`(1) %>% 
   ifelse(paste0(0, quiz1128$month), quiz1128$month)
 quiz1128$date <- quiz1128$Q1 %>% 
   strsplit(split = ",") %>% 
-  sapply(function(.).[2]) 
+  sapply(. %>% .[2])
+#   sapply(function(.).[2]) 
 quiz1128$date %<>%
   nchar %>% 
   `==`(1) %>% 
@@ -64,15 +67,13 @@ quiz1128$Q1_2[quiz1128$Q1_2 == "NA월NA일"] <- NA
 #> 생일을 날짜 순서대로 정리한 복제본 생성
 quiz1128_2 <- quiz1128 %>%
   `[`(order(.$month, .$date), )
-# quiz1128_2 <- quiz1128[quiz1128$month %>% order(quiz1128$date), ]
 # quiz1128_2 <- quiz1128 %>%
-#  `[`(.$month %>% order(quiz1128$date), )
+#   `[`(.$month %>% order(quiz1128$date), )
 # quiz1128_2 <- quiz1128[order(quiz1128$month, quiz1128$date), ]
 quiz1128_2[, c("id", "Q1_2")]
 #> NA 아닌 값만 추출
 birthdate <- quiz1128_2$Q1_2 %>%
   `[`(is.na(.) %>% `!`)
-#> 생일을 응답한 인원
 N1 <- length(birthdate)
 # birthdate <- quiz1128_2$Q1_2[!is.na(quiz1128_2$Q1_2)]
 #> Places where duplicated birthdates appears
@@ -105,7 +106,7 @@ quiz1128_2$Q1_2 %>%
   table %>%
   as.matrix %>%
   t %>%
-  cbind(., "계" = rowSums(.)) %>%
+  cbind("계" = rowSums(.)) %>%
   kable(row.names = NA)
 # table(quiz1128_2$Q1_2[index_dup_b])
 # tbl_b <- t(as.matrix(table(quiz1128_2$Q1_2[index.dup.b])))
@@ -115,7 +116,7 @@ quiz1128_2$Q1_2 %>%
 #> Matching Data
 #> 데이터 오류 점검
 quiz1128$Q2 %>% table
-quiz1128$Q2[quiz1128$Q2 %>% `%in%`(c("RCFL", "RDGL", "RCRL")) %>% which] <- "RCGL"
+quiz1128$Q2[quiz1128$Q2 %>% `%in%`(c("RCFL", "RDGL")) %>% which] <- "RCGL"
 # quiz1128$Q2[which(quiz1128$Q2 %in% c("RCFL", "RDGL"))] <- "RCGL"
 #> 정답 분해
 ans <- "RCGL" %>% strsplit(split = "")
@@ -123,22 +124,24 @@ ans <- "RCGL" %>% strsplit(split = "")
 #> 답안 분해
 matching_score <- quiz1128$Q2 %>% 
   strsplit(split = "") %>%
-  sapply(function(x) ifelse(x == unlist(ans), 1, 0)) %>%
+  sapply(. %>% { `==`(., unlist(ans)) %>% ifelse(1, 0)}) %>%
+#   sapply(. %>% {ifelse( . == unlist(ans), 1, 0)}) %>%
+#   sapply(function(x) ifelse(x == unlist(ans), 1, 0)) %>%
   apply(MARGIN = 2, sum)
+N2 <- matching_score %>%
+  is.na %>%
+  `!` %>%
+  sum
 # matching <- strsplit(quiz1128$Q2, "")
 # matching_count <- mapply(function(x) ifelse(x == unlist(ans), 1, 0), matching)
 # matching_score <- apply(matching_count, 2, sum)
 quiz1128$Q2_2 <- matching_score
-N2 <- matching_score %>% 
-  is.na %>%
-  `!` %>%
-  sum
 #> Q3
 quiz1128$Q3 %<>% factor(levels = c("가", "나", "무응답"), 
                         labels = c("연비 10 => 12", "연비 30 => 40", "불참"))
 #> Q4
-quiz1128$Q4 %<>% factor(levels = c("가", "나"),
-                        labels = c("수용가능", "불공정"))
+quiz1128$Q4 %<>% factor(levels = c("가", "나", "무응답"),
+                        labels = c("수용가능", "불공정", "불참"))
 # str(quiz1128)
 pander(quiz1128[c("Q3", "Q4", "group")])
 ```
@@ -173,24 +176,35 @@ quiz1128_2$Q1_2 %>%
 
 #### 생일이 같은 사람은 몇 명 정도 기대되는가?
 
-$N$을 전체 인원이라 할 때, 기대 인원은 $N\times\{1- (\frac{364}{365})^{N-1}\}$로 계산된다.
-무응답이거나 결석한 학생을 제외한 응답 인원 $N = 123$명에 대하여 기대인원을 계산하면
-
 ```{r, echo = FALSE}
-options(digits = 3)
-E_N <- function(N){N * (1 - (364 / 365) ^ (N - 1))}
-E_N(N1)
+E_N <- . %>% {. * (1 - (364 / 365) ^ ( . - 1))}
+# E_N <- function(N){N * (1 - (364 / 365) ^ (N - 1))}
+V_N <- . %>% {E_N(.) + . * ( . - 1) * (1 - (363 / 365)) ^ ( . - 2)}
+# V_N <- function(N){N * (1 - (364 / 365) ^ (N - 1)) + N * (N - 1) * (1 - (363 / 365)) ^ (N - 2)}
 ```
 
-이고, 오차는 
+$N$을 전체 인원이라 할 때, 기대 인원은 $N\times\{1- (\frac{364}{365})^{N-1}\}$, 
+분산은 $N\times\{1- (\frac{364}{365})^{N-1}\} + N\times(N-1)\times\{1-(\frac{363}{365})^{N-2}\}$로 계산된다.
+
+무응답이거나 결석한 학생을 제외한 응답 인원 `r N1`명에 대하여 기대인원을 계산하면 `r N1 %>% E_N %>% round(1)`명,
+표준오차는 `r N1 %>% V_N %>% sqrt %>% round(1)`명으로 계산되어 관찰된 값이 그 범위에 잘 들어감을 알 수 있다.
+
+##### 기대값의 계산
 
 ```{r, echo = FALSE}
-options(digits = 2)
-V_N <- function(N){N * (1 - (364 / 365) ^ (N - 1)) + N * (N - 1) * (1 - (363 / 365)) ^ (N - 2)}
-sqrt(V_N(N1))
+N1 %>% 
+  E_N %>%
+  round(digits = 1)
 ```
 
-이므로 이론적으로 계산한 값의 범위애 관찰된 값이 거의 들어간다.
+##### 표준오차의 계산
+
+```{r, echo = FALSE}
+N1 %>%
+  V_N %>%
+  sqrt %>%
+  round(digits = 1)
+```
 
 #### 태어난 달의 분포는?
 
@@ -218,7 +232,7 @@ quiz1128$month %>%
 ```{r, echo = FALSE}
 quiz1128$month %>%
   table %>%
-  chisq.test %>%
+  chisq.test(simulate.p.value = TRUE) %>%
   pander
 ```
 
@@ -230,10 +244,11 @@ quiz1128$month %>%
 
 ```{r, matching, echo = FALSE}
 quiz1128$Q2_2 %>%
+  factor(levels = c(0, 1, 2, 4)) %>%
   table(quiz1128$group, .) %>%
   cbind("계" = rowSums(.)) %>%
   rbind("계" = colSums(.)) %>%
-  pander
+  kable
 ```
 
 #### 카이제곱 적합도 테스트
@@ -243,18 +258,18 @@ quiz1128$Q2_2 %>%
 ```{r, echo = FALSE}
 prob <- c(9, 8, 6, 1) / 24
 Expected <- N2 * prob
-names(Expected) <- c("0", "1", "2", "4")
+names(Expected) <- paste0(c("0", "1", "2", "4"), "개")
 Expected %>%
   as.matrix %>%
   t %>%
   cbind("계" = rowSums(.)) %>%
-  format(digits = 2, nsmall = 1) %>%
-  pander
-# pander(t(as.matrix(round(Expected))))
+  format(digits = 1, nsmall = 1) %>%
+  kable(align = "c")
 ```
 
 ```{r, echo = FALSE}
 quiz1128$Q2_2 %>%
+  factor(levels = c(0, 1, 2, 4)) %>%
   table %>%
   chisq.test(p = c(9, 8, 6, 1)/24, simulate.p.value = TRUE) %>%
   pander
@@ -267,18 +282,18 @@ quiz1128$Q2_2 %>%
 
 `r knitr::include_graphics("../pics/Quiz180523_Q3.png", dpi = NA)`
 
-1,200 킬로미터룰 주행한다고 해 보자. '가'는 120리터에서 100리터로 20리터를 절감하고, '나'는 40리터에서 30리터로 10리터를 절감하게 된다. 따라서 '가'운전자가 이전보다 더 절감하게 된다.
+1,200 킬로미터룰 주행한다고 해 보자. '가'는 120리터에서 100리터로 20리터를 절감하고, '나'는 40리터에서 30리터 10리터를 절감하게 된다. 따라서 '가'운전자가 이전보다 더 절감하게 된다.
 
 ```{r, Framing Effect, echo = FALSE}
 tbl_q3_a <- quiz1128$Q3 %>%
   table(quiz1128$group, ., useNA = "ifany") %>%
   cbind("계" = rowSums(.)) %>%
-  rbind("계" = colSums(.)) 
+  rbind("계" = colSums(.))
 colnames(tbl_q3_a)[4] <- "결석"
 tbl_q3_a %>% 
-  pander
+  kable
 tbl_q3_a %>%
-  `[`(-3, -(3:5)) %>% 
+  `[`(-3, -(3:4)) %>% 
   chisq.test(simulate.p.value = TRUE, B = 20000) %>%
   pander
 ```
@@ -287,12 +302,12 @@ tbl_q3_a %>%
 
 ```{r, Framing effects in percentage, echo = FALSE}
 tbl_q3_a %>%
-  `[`(3, -(3:5)) %>%
+  `[`(3, -(3:5), drop = FALSE) %>%
   prop.table %>%
-  c(., "계" = sum(.)) %>%
+  cbind("계" = rowSums(.)) %>%
   `*`(100) %>%
   format(digits = 2, nsmall = 1) %>%
-  pander
+  kable(align = "c", row.names = FALSE)
 ```
 
 ### 화폐 착각
@@ -313,13 +328,13 @@ tbl_q3_a %>%
 tbl_q4_a <- quiz1128$Q4 %>%
   table(quiz1128$group, ., useNA = "ifany") %>%
   cbind("계" = rowSums(.)) %>%
-  rbind("계" = colSums(.)) 
-colnames(tbl_q4_a)[3] <- "결석"
+  rbind("계" = colSums(.))
+colnames(tbl_q4_a)[4] <- "결석"
 rownames(tbl_q4_a) <- c("실업+인플레0%, 임금삭감7%", "실업+인플레12%, 임금인상5%", "계")
 tbl_q4_a %>% 
-  pander
+  kable
 tbl_q4_a %>%
-  `[`(-3, -(3:4)) %>%
+  `[`(-3, -(3:5)) %>%
   chisq.test(simulate.p.value = FALSE) %>%
   pander
 ```
@@ -328,12 +343,12 @@ tbl_q4_a %>%
 
 ```{r, Money illusion in percentage, echo = FALSE}
 tbl_q4_a %>% 
-  `[`(-3, -(3:4)) %>%
+  `[`(-3, -(3:5)) %>%
   prop.table(margin = 1) %>%
   `*`(100) %>%
   cbind("계" = rowSums(.)) %>%
   format(digits = 2, nsmall = 1) %>%
-  pander
+  kable
 ```
 
 ```{r, save, echo = FALSE}
