--- a/R/quiz181128_Report_v2.Rmd
+++ b/R/quiz181128_Report_v2.Rmd
@@ -33,35 +33,53 @@ quiz1128$dept %<>% factor
 quiz1128$year %<>% factor
 quiz1128$group %<>% factor(levels = c("Red", "Black"))
 
-#> birth_month_date <- strsplit(quiz1128$Q1, ",")
-birth_month_date <- quiz1128 %>%
-  select("Q1") %>%
-  .[[1]]
-#> quiz1128$Q1
-#> `[[`(1) 바로 윗 식을 고쳐 쓴 방법
-#> .[, "Q1"] 두 줄을 한 줄로 
-#> 월, 일을 날짜 순으로 정리하기 위하여 글자를 떼어내고 숫자로 변화. 1 => 01 등.
+##> 생일이 같은 사람을 찾아 날짜 순으로 늘어세우기.
+##1> 입력된 데이터 살피기
+#> strsplit(quiz1128$Q1, ",") 하면 나오는 리스트의 요소를 month와 date 로 나웠다 다시 합치기
+#> Q1의 생김새
+quiz1128$Q1
+#> pipe를 이용하여 고쳐쓰면
+##> select를 이용할 때
+# quiz1128 %>% 
+#   select("Q1") %>% 
+#   .[[1]] 
+##> 바로 윗 식만 고쳐쓰면
+# `[[`(1) 
+##> 컨테이너 `.`을 이용하여 한 줄로 고쳐쓰면
+# .[, "Q1"] #> 두 줄을 한 줄로 
+
+##2> 태어난 월, 일을 날짜 순으로 정리하기
+##> 태어난 달 떼어내고 순서대로 정리하기 위하여 "1" => "01"로 변환
+#> 태어난 달 뗴어내기. pipe를 이용하여 사용자함수 표현하는 법에 유의.
 quiz1128$month <- quiz1128$Q1 %>% 
   strsplit(split = ",") %>% 
   sapply(. %>% .[1])
 #  sapply(function(.).[1]) 
+
+#> 태어난 달이 1월, 2월 등인 경우 01월, 02월 등으로 표시하여 1월, 10월, 11월 순으로 나오지 않게 함.
 quiz1128$month %<>%
   nchar %>% 
   `==`(1) %>% 
   ifelse(paste0(0, quiz1128$month), quiz1128$month)
+
+##> 태어난 날에 대해서도 태어난 달과 같은 방법으로 조치
+#> 태어난 날 떼어내기.
 quiz1128$date <- quiz1128$Q1 %>% 
   strsplit(split = ",") %>% 
   sapply(. %>% .[2])
 #   sapply(function(.).[2]) 
+#> 1일, 2일 등을 01일, 02일로 표현.
 quiz1128$date %<>%
   nchar %>% 
   `==`(1) %>% 
   ifelse(paste0(0, quiz1128$date), quiz1128$date)
+#> pipe를 사용하지 않았을 때의 코드
 # quiz1128$month <- sapply(strsplit(birth_month_date, split = ","), function(x) x[1])
 # quiz1128$month <- ifelse(nchar(quiz1128$month) == 1, paste0(0, quiz1128$month), quiz1128$month)
 # quiz1128$date <- sapply(strsplit(birth_month_date, split = ","), function(x) x[2])
 # quiz1128$date <- ifelse(nchar(quiz1128$date) == 1, paste0(0, quiz1128$date), quiz1128$date)
 
+##> "1월1일" 등의 포맷으로 합치기. str_c 용법 알아볼 것.
 quiz1128$Q1_2 <- quiz1128 %$%
   paste0(.$month, "월", .$date, "일")
 # quiz1128$Q1_2 <- quiz1128$month %>%
@@ -69,47 +87,59 @@ quiz1128$Q1_2 <- quiz1128 %$%
 # quiz1128$Q1_2 <- paste0(quiz1128$month, "월", quiz1128$date, "일")
 # quiz1128$Q1_2 <- str_c(quiz1128$month, "월", quiz1128$date, "일")
 
+##> 합치는 과정에서 NA는 "NA월NA일"로 바뀌게 되므로 NA로 수정. %<>%와 `[<-`의 용법에 유의 
 quiz1128$Q1_2 %<>%
   `[<-`(. == "NA월NA일", NA)
 # quiz1128$Q1_2[quiz1128$Q1_2 == "NA월NA일"] <- NA
 
-#> 생일을 날짜 순서대로 정리한 복제본 생성
+##3> 생일을 날짜 순서대로 정리한 복제본 생성
+##> order 함수를 이용하여 태어난 달 먼저, 그 다음 태어난 날짜 순이 되도록 정리
+#> pipe를 활용하는 다양한 방법 숙지.
 quiz1128_2 <- quiz1128 %>%
   `[`(order(.$month, .$date), )
+#> pipe를 활용하는 또다른 방법
 # quiz1128_2 <- quiz1128 %>%
 #   `[`(.$month %>% order(quiz1128$date), )
+#> pipe를 사용하지 않고 한 줄로 표혐.
 # quiz1128_2 <- quiz1128[order(quiz1128$month, quiz1128$date), ]
+#> 학번과 태어난 월일을 날짜 순으로 나열 
 quiz1128_2[, c("id", "Q1_2")]
-#> NA 아닌 값만 추출
+##> 맨 마지막에 나오는 NA는 제거
+#> NA 아닌 값만 추출. 추출하는 조건식에 컨테이너 `.` 활용하는 법 유의.
 birthdate <- quiz1128_2$Q1_2 %>%
   `[`(is.na(.) %>% `!`)
-N1 <- length(birthdate)
 # birthdate <- quiz1128_2$Q1_2[!is.na(quiz1128_2$Q1_2)]
-#> Places where duplicated birthdates appears
+#> 태어난 월일을 제출한 인원
+N1 <- birthdate %>% length
+# N1 <- length(birthdate)
+
+##4> 어느 위치에서 앞에 나온 날짜와 같은 날짜가 등장하는 지 파악하고 중복된 생일 나열.
+#> duplicated 함수의 용법과 birthdate의 특징에 따라 TRUE가 나오면 바로 그 위치 앞에 중복된 생일 위치.
 dup_b <- birthdate %>%
   duplicated
 # dup_b <- duplicated(birthdate)
-#> Duplicated birthdates which appears at least twice (3번 이상 중복되는 값이 나올 수 있음)
-b_dup <- birthdate %>%
-  `[`(duplicated(.))
-# b_dup <- birthdate[duplicated(birthdate)]
-# b_dup <- birthdate[dup_b]
-#> List of duplicated birthdates
+#> 최소한 두번 이상 중복되는 생일들(3번 이상 중복되는 값이 나올 수 있음), 둘째 줄까지만 수행해보면 5월10일이 두번 나오는 데 이는 5월10일이 생일인 사람이 세명 있다는 뜻임.
 b_dup_b <- birthdate %>%
-  `[`(. %in% (birthdate %>%
-  `[`(duplicated(.)) %>% unique))
-# b_dup_b <- birthdate[birthdate %in% unique(birthdate[duplicated(birthdate)])]
-# b_dup_b <- birthdate[birthdate %in% unique(b_dup)]
-#> Where the duplicates appear in Q1_2
+  `[`(duplicated(.)) %>%
+  unique
+# b_dup_b <- unique(birthdate[duplicated(birthdate)])
+# b_dup_b <- unique(birthdate[dup_b])
+#> 중복되는 생일들을 순서대로 나열하려면 어느 날짜들이 중복된 생일인지 파악하고, 전체 생일 목록과 대조하여 그 리스트에 등장하는 생일들을 뽑아냄. 
+birthdate %>%
+  `[`(. %in% (birthdate %>% `[`(duplicated(.)) %>% unique))
+# birthdate[birthdate %in% unique(birthdate[duplicated(birthdate)])]
+# birthdate[birthdate %in% b_dup_b]
+#> Q1_2의 어느 위치에 중복된 생일이 등장하는가?
 index_dup_b <- quiz1128_2$Q1_2 %>%
-  `%in%`(b_dup_b %>% unique) %>%
+  `%in%`(b_dup_b) %>%
   which
-# index_dup_b <- which(quiz1128$Q1_2 %in% unique(b_dup_b)
-#> List Duplicated birthdates with id and group
+# index_dup_b <- which(quiz1128$Q1_2 %in% b_dup_b)
+#> 중복된 생일, 학번, 그룹 나열
 quiz1128_2 %>%
   `[`(index_dup_b, c("id", "Q1_2", "group"))
 # quiz1128_2[index_dup_b, c("id", "Q1_2", group)]
-#> To remove 0 counts cells, use `droplevels`. 
+
+##5>중복된 생일을 테이블로 나타내고 몇 명인지 합산.
 quiz1128_2$Q1_2 %>%
   `[`(index_dup_b) %>%
   table %>%
@@ -120,23 +150,28 @@ quiz1128_2$Q1_2 %>%
 # table(quiz1128_2$Q1_2[index_dup_b])
 # tbl_b <- t(as.matrix(table(quiz1128_2$Q1_2[index.dup.b])))
 # cbind(tbl_b, "계" = rowSums(tbl_b))
-# kable(t(as.matrix(table(droplevels(quiz1128_2$Q1_2[index.dup.b])))))
+# kable(t(as.matrix(table(quiz1128_2$Q1_2[index.dup.b]))))
 
-#> Matching Data
-#> 데이터 오류 점검
+##> Matching Data
+##1> 데이터 오류 점검
 quiz1128$Q2 %>% table
+#> RCRL은 RCGL의 오류로 파악
 quiz1128$Q2[quiz1128$Q2 %>% `%in%`(c("RCFL", "RDGL", "RCRL")) %>% which] <- "RCGL"
 # quiz1128$Q2[which(quiz1128$Q2 %in% c("RCFL", "RDGL"))] <- "RCGL"
-#> 정답 분해
+
+##2> 정답 분해
 ans <- "RCGL" %>% strsplit(split = "")
 # ans <- strsplit("RCGL", split = "")
-#> 답안 분해
+
+##3> 답안 분해
+#> 사용자 함수를 pipe로 표현하는 다양한 방법에 유의.
 matching_score <- quiz1128$Q2 %>% 
   strsplit(split = "") %>%
   sapply(. %>% { `==`(., unlist(ans)) %>% ifelse(1, 0)}) %>%
 #   sapply(. %>% {ifelse( . == unlist(ans), 1, 0)}) %>%
 #   sapply(function(x) ifelse(x == unlist(ans), 1, 0)) %>%
   apply(MARGIN = 2, sum)
+#> 맷칭 문제에 응답한 인원 파악
 N2 <- matching_score %>%
   is.na %>%
   `!` %>%
@@ -144,11 +179,12 @@ N2 <- matching_score %>%
 # matching <- strsplit(quiz1128$Q2, "")
 # matching_count <- mapply(function(x) ifelse(x == unlist(ans), 1, 0), matching)
 # matching_score <- apply(matching_count, 2, sum)
+#> Q2_2에 저장
 quiz1128$Q2_2 <- matching_score
-#> Q3
+##> Q3
 quiz1128$Q3 %<>% factor(levels = c("가", "나", "무응답"), 
                         labels = c("연비 10 => 12", "연비 30 => 40", "불참"))
-#> Q4
+##> Q4
 quiz1128$Q4 %<>% factor(levels = c("가", "나"),
                         labels = c("수용가능", "불공정"))
 # str(quiz1128)
@@ -180,7 +216,7 @@ quiz1128_2$Q1_2 %>%
   as.matrix %>%
   t %>%
   cbind("계" = rowSums(.)) %>%
-  kable(row.names = NA)
+  kable(row.names = FALSE)
 ```
 
 #### 생일이 같은 사람은 몇 명 정도 기대되는가?
@@ -196,7 +232,7 @@ $N$을 전체 인원이라 할 때, 기대 인원은 $N\times\{1- (\frac{364}{36
 분산은 $N\times\{1- (\frac{364}{365})^{N-1}\} + N\times(N-1)\times\{1-(\frac{363}{365})^{N-2}\}$로 계산된다.
 
 무응답이거나 결석한 학생을 제외한 응답 인원 `r N1`명에 대하여 기대인원을 계산하면 `r N1 %>% E_N %>% round(1)`명,
-표준오차는 `r N1 %>% V_N %>% sqrt %>% round(1)`명으로 계산되어 관찰된 값이 그 범위에 잘 들어감을 알 수 있다.
+표준오차는 `r N1 %>% V_N %>% sqrt %>% round(1)`명으로 계산되어 관찰된 값이 그 범위 근처에 있음을 알 수 있다.
 
 ##### 기대값의 계산
 
