--- a/R/etest_03_report.Rmd
+++ b/R/etest_03_report.Rmd
@@ -131,3 +131,9 @@ plot(score1 ~ bird, data = quiz03,
 ```{r, echo = FALSE}
 pander(t.test(score1 ~ bird, data = quiz03))
 ```
+
+## Save
+
+```{r, echo = FALSE}
+saveRDS(quiz03, file = "quiz03.RDs")
+```
