--- a/R/etest_05_report.Rmd
+++ b/R/etest_05_report.Rmd
@@ -131,3 +131,9 @@ plot(score1 ~ bird, data = quiz05,
 ```{r, echo = FALSE}
 pander(t.test(score1 ~ bird, data = quiz05))
 ```
+
+## Save
+
+```{r, echo = FALSE}
+saveRDS(quiz05, file = "quiz05.RDs")
+```
