--- a/R/etest_06_report.Rmd
+++ b/R/etest_06_report.Rmd
@@ -131,3 +131,9 @@ plot(score1 ~ bird, data = quiz06,
 ```{r, echo = FALSE}
 pander(t.test(score1 ~ bird, data = quiz06))
 ```
+
+## Save
+
+```{r, echo = FALSE}
+saveRDS(quiz06, file = "quiz06.RDs")
+```
