--- a/R/AR_Final_Records1802_01.Rmd
+++ b/R/AR_Final_Records1802_01.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "응용초프로그래밍 R : 최종"
-author: "데이터과학 융합스쿨 이기원교수"
+title: "응용프로그래밍 R - 01반 최종"
+author: "금융정보통계학과 이기원교수"
 date: "`r Sys.Date()`"
 output: html_document
 ---
@@ -23,28 +23,26 @@ panderOptions("table.split.table", Inf)
 <!--### Total Scores-->
 
 ```{r, Total Scores, message = FALSE, echo = FALSE}
-total <- read.xlsx(file = "../data/R_scoreList_1801.xlsx", 
+total <- read.xlsx(file = "../data/AR_01_scoreList_1802_v2.xlsx", 
                    sheetIndex = 1, 
-                   rowIndex = 1:56, 
+                   rowIndex = 3:18, 
                    colIndex = 2:8, 
                    colClasses = c(rep("character", 2), rep("numeric", 5)), 
                    header = TRUE,
                    stringsAsFactors = FALSE)
-# str(total)
+str(total)
 total <- total[c(2, 1, 7, 4:6, 3)]
-v_names_total <- c("ID", "Name", "Offline", "Midterm", "Assignment", "Team_Project", "Total")
-names(total) <- v_names_total
+v.names.total <- c("ID", "Name", "Offline", "Midterm", "Assignment", "Team_Project", "Total")
+names(total) <- v.names.total
 N <- nrow(total)
 total$Ranks <- N + 1 - rank(total$Total)
-total$Grades <- ifelse(total$Total >= 91, 
-                       "A+", 
-                       ifelse(total$Total > 20, "B+", "F"))
-o_names <- order(total$Name)
-v_names_kr <- c("학번", "이름", "교실출석(20)", "중간고사(20)", "과제(40)", "팀 프로젝트(20)", "총점(100)", "순위(55명중)", "학점")
-total_kr <- total
-names(total_kr) <- v_names_kr
-kable(total_kr[o_names, ], row.names = FALSE)
-# str(total)
+total$Grades <- ifelse(total$Ranks <= floor(N*0.4), "A+", ifelse(total$Ranks <= floor(N*0.7), "B+", "C+"))
+o.names <- order(total$Name)
+v.names.kr <- c("학번", "이름", "교실출석(20)", "중간고사(20)", "과제(40)", "팀 프로젝트(20)", "총점(100)", "순위(10명중)", "학점")
+total.kr <- total
+names(total.kr) <- v.names.kr
+kable(total.kr[o.names, ], row.names = FALSE)
+str(total)
 ```
 
 <!--
@@ -52,7 +50,7 @@ kable(total_kr[o_names, ], row.names = FALSE)
 
 ```{r, individual scores, echo = FALSE}
 my.grade <- function(name){
-  kable(total_kr[total$Name %in% name, -1], row.names = FALSE)
+  kable(total.kr[total$Name %in% name, -1], row.names = FALSE)
 }
 # my.grade(c("강민영", "홍효동"))
 # my.grade("서강현")
@@ -63,7 +61,7 @@ my.grade <- function(name){
 <!--### Save Data
 
 ```{r Save Data, echo = FALSE}
-save.image(file = "../R/R_records_01.RData")
+save.image(file = "../R/AR_records_01.RData")
 ```
 
 -->
