--- a/R/Final_Records1802.Rmd
+++ b/R/Final_Records1802.Rmd
@@ -22,7 +22,7 @@ panderOptions("table.split.table", Inf)
 
 
 ```{r, Total Scores, message = FALSE, echo = FALSE}
-total <- read.xlsx(file = "../data/scoreList1802_v2.xlsx", 
+total <- read.xlsx(file = "../data/scoreList1802_v4.xlsx", 
                    sheetIndex = 1, 
                    rowIndex = 3:155, 
                    colIndex = 2:9, 
@@ -34,14 +34,24 @@ v_names_total <- c("ID", "Name", "Offline", "Online", "Quiz", "TED", "Data_Lab",
 names(total) <- v_names_total
 total[total$Name == "박광진", c("Data_Lab", "Total")] <- c(15.65, 90.0)
 total[total$Name == "홍예진", c("Data_Lab", "Total")] <- c(18.85, 95.0)
+# total[total$Name == "이혁희", c("Data_Lab", "Total")] <- c(8.43, 70.0)
+# total[total$Name == "김재인", c("Data_Lab", "Total")] <- c(6.83, 70.0)
+total <- total[!(total$Name == "나형주"), ]
 ```
 
-## FA list
+## FA 명단
  
 ```{r, FA_list, eval = TRUE, message = FALSE, echo = FALSE}
 FA_id <- c("20173305", "20173310", "20173526", "20183937", "20186173")
 FA <- total$ID %in% FA_id
 total[FA, "Name"]
+```
+
+## 대체 명단
+
+```{r, eval = TRUE, message = FALSE, echo = FALSE}
+(Repl_names <- c("문경배", "고원영", "박지윤", "최지용", "엄수정", "고혜성", "신유빈", "이나현"))
+Repl <- total$Name %in% Repl_names
 ```
 
 ## 줄기-잎 그림
@@ -51,7 +61,7 @@ total2 <- total[!FA, ]
 total2$Total %>% 
   stem 
 total2$Grades <- total2$Total %>% 
-  cut(breaks = c(0, 60, 75, 80, seq(90, 100, by = 5)), include.lowest = TRUE, right = FALSE) %>%
+  cut(breaks = c(0, 40, 75, 80, 90, 95, 100), include.lowest = TRUE, right = FALSE) %>%
   factor(labels = c("C0", "C+", "B0", "B+", "A0", "A+"))
 counts <- total2$Grades %>%
   table
@@ -59,22 +69,42 @@ perc <- counts %>%
   prop.table %>%
   `*`(100) %>%
   round(digits = 2) 
-rbind("Counts" = format(counts, digits = 0, nsmall = 0), 
-      "Percentage" = format(perc, digits = 1, nsmall = 1), 
-      "Cumulative" = format(rev(cumsum(rev(perc))), digits = 1, nsmall = 1)) %>%
+# rbind("Counts" = format(counts, digits = 0, nsmall = 0), 
+#       "Percentage" = format(perc, digits = 1, nsmall = 1), 
+#       "Cumulative" = format(cumsum(perc), digits = 1, nsmall = 1)) %>%
 #   cbind("Sum" = rowSums(.)) %>%
 #   format(digits = 1, nsmall = 1) %>%
-  kable(align = "r")
+#   kable(align = "r")
 # total2$Grades %<>% 
 #   factor(labels = c("C0", "C+", "B0", "B+", "A0", "A+"))
 total[!FA, ] <- total2[, -9]
 total[!FA, "Grades"] <- total2$Grades
-levels(total$Grades) <- c(levels(total2$Grades), "FA")
+#> factor level 맨 아래에 "FA" 추가하는 코드
+levels(total$Grades) <- c(levels(total$Grades), "FA")
+total$Grades <- relevel(total$Grades, ref = "FA")
+# levels(total$Grades) <- list(FA = "FA", "C0" = "C0", "C+" = "C+", "B0" = "B0", "B+" = "B+", "A0" = "A0", "A+" = "A+")
 total[FA, "Grades"] <- "FA"
+#> 대체 수강자 중 A+ => A0
+total[Repl & total$Grades == "A+", "Grades"] <- "A0"
+#> 특별 요청
+total[total$Name == "김수빈", "Grades"] <- "C+"
+counts2 <- total$Grades %>%
+  table
+perc2 <- counts2 %>%
+  prop.table %>%
+  `*`(100) %>%
+  round(digits = 2) 
+rbind("Counts" = format(counts2, digits = 0, nsmall = 0), 
+      "Percentage" = format(perc2, digits = 1, nsmall = 1), 
+      "Cumulative" = format(rev(cumsum(rev(perc2))), digits = 1, nsmall = 1)) %>%
+#   cbind("Sum" = rowSums(.)) %>%
+#   format(digits = 1, nsmall = 1) %>%
+  kable(align = "r")
 total %>% 
   kable(align = c(rep("r", 8), "c"))
 ```
 
+<!--
 ## 출석, TED 만점자
 
 ```{r, eval = TRUE, echo = FALSE}
@@ -93,19 +123,24 @@ nrow(total[total$Grades %in% c("A+", "A0"), ])
 ```
 
 <P style = "page-break-before:always">
-
+-->
 
 ```{r, individual scores, eval = TRUE, echo = FALSE}
 total <- total[, ]
-v_names_kr <- c("학번", "이름", "교실(20)", "온라인(10)",  "TED(30)", "퀴즈(20)", "데이터실험(20)", "총점(100)", "학점")
+v_names_kr <- c("학번", "이름", "교실(20)", "온라인(10)",  "퀴즈(20)", "TED(30)", "데이터실험(20)", "총점(100)", "학점")
 total_kr <- total
 names(total_kr) <- v_names_kr
 my_grade <- function(name){
   kable(total_kr[total$Name %in% name, -1], row.names = FALSE)
 }
 # my_grade(c("강보경", "이소연", "최용훈", "강정우", "박진욱", "박지민", "전강수", "권지연", "양아영", "윤동준", "이한솔", "장대혁", "장민호"))
-# my_grade(c("양승언", "김종훈", "원종한", "김영운"))
+# my_grade(c("김도영"))
+# my_grade(c("이지현"))
+# my_grade(c("정해찬"))
+# my_grade(c("강예림"))
+my_grade(c("강민진"))
 ```
+
 
 <!--### Save Data
 
