--- a/R/BFI_MI_1802_data.Rmd
+++ b/R/BFI_MI_1802_data.Rmd
@@ -37,6 +37,8 @@ BFI %<>%
   `names<-`(c("ID", "E1", "A1", "O1", "C1", "N1", "E2", "A2", "O2", "C2", "N2", "O3", "A3"))
 BFI$ID %<>%
   as.character
+BFI[c("A2", "O2", "C2")] %<>% 
+  `-` (6, .)
 BFI %>% 
   head %>%
   kable
